api: DELETE /scene
